# NusukRequestApp

./: .env  .gitignore  README.md  app.py  create_test_record.py  main.py  models.py  pyproject.toml  render.yaml  requirements.txt
HajjCardRequest/: app.py  main.py  pyproject.toml  render.yaml
HajjCardRequest/static/css/: style.css
HajjCardRequest/static/js/: script.js
HajjCardRequest/templates/: base.html
static/css/: style.css
static/js/: script.js
templates/: admin.html  base.html  employee.html  index.html  statistics.html
